# secureml

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: README.md  ci.yml
examples/: README.md  anonymization_examples.py  api_server.py  audit_trail_examples.py  basic_usage.py  cli_examples.sh  compliance_checking.py  compliance_examples.py  differential_privacy_examples.py  federated_learning_examples.py  report_generation_examples.py  synthetic_data_examples.py  using_vault.py
secureml/: __init__.py  anonymization.py  audit.py  cli.py  compliance.py  federated.py  key_management.py  privacy.py  reporting.py  synthetic.py
secureml/isolated_environments/: __init__.py  tf_privacy.py  tf_privacy_trainer.py
secureml/key_management/: README.md  __init__.py
secureml/presets/: __init__.py  ccpa.yaml  gdpr.yaml  hipaa.yaml  lgpd.yaml
secureml/templates/: __init__.py
source/: conf.py  index.rst  installation.rst  quickstart.rst
source/api/: anonymization.rst  audit.rst  cli.rst  compliance.rst  federated_learning.rst  index.rst  key_management.rst  privacy.rst  reporting.rst  synthetic_data.rst
source/examples/: anonymization.rst  audit.rst  cli.rst  compliance.rst  differential_privacy.rst  federated_learning.rst  index.rst  reporting.rst  synthetic_data.rst
source/user_guide/: anonymization.rst  audit_trails.rst  cli.rst  compliance.rst  differential_privacy.rst  federated_learning.rst  index.rst  isolated_environments.rst  key_management.rst  reporting.rst  synthetic_data.rst
tests/: README.md  conftest.py  test_anonymization.py  test_audit.py  test_cli.py  test_compliance.py  test_federated.py  test_privacy.py  test_property_based.py  test_reporting.py  test_synthetic.py
