[tool.poetry]
name = "secureml"
version = "0.3.0"
description = "A Python library for privacy-preserving machine learning"
authors = ["Enzo Paloschi Biondo <enzobiondo11@outlook.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/scimorph/secureml"
documentation = "https://secureml.readthedocs.io"
keywords = ["machine learning", "privacy", "security", "compliance", "gdpr"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.4"
pandas = "^2.2.3"
opacus = "^1.5.3"
torch = "^2.6.0"
# tensorflow-privacy removed and handled via isolated environment
scikit-learn = "^1.6.1"
spacy = "^3.8.3"
faker = "^37.0.1"
pyyaml = "6.0.2"
flwr = { extras = ["simulation"], version = "^1.17.0" }
sdv = "*"
jinja2 = "^3.1.4"
matplotlib = "^3.7.1"
click = "^8.1.8"
pyarrow = "^19.0.1"
sphinx-rtd-theme = "^1.3.0"
pydantic = "^2.11.3"
weasyprint = {version = "^64.1", optional = true}
hvac = {version = "^1.1.1", optional = true}

[tool.poetry.extras]
pdf = ["weasyprint"]
vault = ["hvac"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
hypothesis = "^6.82.0"
black = "^24.3.0"
isort = "^5.12.0"
mypy = "^1.5.0"
sphinx = "^7.1.0"

[tool.poetry.scripts]
secureml = "secureml.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 